Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: "The only true wisdom is in knowing you know nothing" - Socrates 
 header-img: img/home-bg.png
 email: jenelyn.hopkins@gmail.com
 copyright_name: Jenhop8786
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Learning is a circle that's never ending 
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Jenhop8786
