Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: The only true wisdom is in knowing you know nothing - Socrates 
+title: 'The only true wisdom is in knowing you know nothing' - Socrates 
 header-img: img/home-bg.png
 email: jenelyn.hopkins@gmail.com
 copyright_name: Jenhop8786
