--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 author: Jenelynrose Hopkins
-title: 'The only true wisdom is in knowing you know nothing' - Socrates 
+title: The only true wisdom is in knowing you know nothing - Socrates 
 header-img: img/home-bg.png
 email: jenelyn.hopkins@gmail.com
 copyright_name: Jenelynrose Hopkins
