change header pic

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 author: Jenelynrose Hopkins
 title: The only true wisdom is in knowing you know nothing - Socrates
-header-img: img/IMG_8659.JPG
+header-img: img/header-pic.png
 email: jenelyn.hopkins@gmail.com
 copyright_name: Jenelynrose Hopkins
 description: > # this means to ignore newlines until "baseurl:"
